--- a/src/resources/css/themes/Black/LocalTrack.css
+++ b/src/resources/css/themes/Black/LocalTrack.css
@@ -64,13 +64,13 @@ FxPanelItem QPushButton:hover                           /* hover effect for the 
 
 FxPanelItem QPushButton:checked                         /* 'plugin bypass' button is checked */
 {
-    background-color: rgb(0, 128, 0);
-    border-color: rgb(0, 100, 0);
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(20, 128, 20), stop:1 rgb(0, 80, 0));
+    border-color: rgb(20, 20, 20);
 }
 
 FxPanelItem QPushButton:checked:hover                   /* hover effect for 'plugin bypass' button when checked */
 {
-    background-color: rgb(0, 180, 0);
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(20, 180, 20), stop:1 rgb(0, 80, 0));
 }
 
 
