fix disabled button (jam room) for Flat theme
There was not code in Flat theme for the disabled button. This PR copies the one from the Rounded theme

--- a/src/resources/css/themes/Flat/General.css
+++ b/src/resources/css/themes/Flat/General.css
@@ -19,6 +19,12 @@ QPushButton:hover
     border: 1px solid rgb(120, 120, 120);
 }
 
+QPushButton:disabled
+{
+    background-color: rgba(0, 0, 0, 20);
+    color: rgba(0, 0, 0, 60)
+}
+
 
 /* Scroll bars ----------------------*/
 QScrollBar:vertical,
