--- a/src/resources/css/themes/Black/Dialogs.css
+++ b/src/resources/css/themes/Black/Dialogs.css
@@ -1,21 +1,43 @@
-/* Dialogs in Black theme
--------------------------------------*/
+/* Dialogs in Black theme */
+
+QMessageBox,
+QInputDialog,
+PluginScanDialog,
+MidiToolsDialog
+{
+    color: rgb(140, 140, 140);
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+        stop:0 rgb(40, 40, 40),
+        stop:1 rgba(20, 20, 20));
+
+    border-radius: 2px;
+}
 
 PreferencesDialog
 {
-    background-color: rgb(35, 35, 35);
+    border-color: rgb(20, 20, 20);
+    color: rgb(40, 40, 40);
+    background-color: rgb(80, 80, 80);
 }
 
 PreferencesDialog #tabAudio, #tabMidi, #tabVST, #tabRecording, #tabMetronome
 {
-    background-color: rgb(80, 80, 80);
+    background-color: rgb(40, 40, 40);
+}
+
+QInputDialog QPushButton
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 rgb(20,20,20), stop:0.02 rgb(80, 80, 80), stop:0.7 rgba(90, 90, 90), stop:1 rgb(40,40,40));
+    border-color: rgb(20, 20, 20);
+    color: rgb(140,140,140);
 }
 
 PluginScanDialog
 {
-    background-color: rgb(80, 80, 80);
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+        stop:0 rgb(250, 250, 250),
+        stop:1 rgb(220, 220, 220));
 }
-
 
 PluginScanDialog QPlainTextEdit
 {
@@ -29,20 +51,35 @@ PluginScanDialog #labelPluginText
 
 BusyDialog
 {
-    border: 1px solid rgb(40, 40, 40);
+    border: 1px solid rgba(0, 0, 0, 30);
     padding: 0px;
     margin: 0px;
+    border-radius: 3px;
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-    stop:0 rgb(80, 80, 80),
-    stop:1 rgb(20, 20, 20));
+            stop:0 rgb(80, 80, 80),
+            stop:0.1 rgb(60, 60, 60)
+            stop:0.9 rgba(40, 40, 40),
+            stop:1 rgba(20, 20, 20));
 }
 
-QMessageBox,
-QInputDialog,
-PluginScanDialog,
-MidiToolsDialog
+BusyDialog > QLabel /* the text appearing in Busy dialog, like "connecting in ninbot.com" */
 {
-    background-color: rgb(140, 140, 140);
-    border: 1px outset gray;
-    padding: 32px;
+    font-weight: bold;
+    color: rgb(140, 140, 140);
+}
+
+PreferencesDialog QComboBox                         /* the colors inside the combo box*/
+{
+    background-color: rgb(80, 80, 80);
+    selection-background-color: rgb(50, 50, 50);
+    selection-color: rgb(10, 10, 10);
+}
+
+PreferencesDialog QComboBox QAbstractItemView      /* the colors inside drop down menu of the combo box*/
+{
+    border: 1px solid black;
+    color: rgb(160, 160, 160);
+    background-color: rgb(70, 70, 70);
+    selection-background-color: rgb(50, 50, 50);
+    selection-color: rgb(10, 10, 10);
 }
