--- a/src/resources/css/themes/Black/Dialogs.css
+++ b/src/resources/css/themes/Black/Dialogs.css
@@ -3,16 +3,7 @@
 QMessageBox,
 QInputDialog,
 PluginScanDialog,
-MidiToolsDialog
-{
-    color: rgb(140, 140, 140);
-    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-        stop:0 rgb(40, 40, 40),
-        stop:1 rgba(20, 20, 20));
-
-    border-radius: 2px;
-}
-
+MidiToolsDialog,
 PreferencesDialog
 {
     border-color: rgb(20, 20, 20);
@@ -23,6 +14,23 @@ PreferencesDialog
 PreferencesDialog #tabAudio, #tabMidi, #tabVST, #tabRecording, #tabMetronome
 {
     background-color: rgb(40, 40, 40);
+}
+
+
+PreferencesDialog QComboBox                         /* the colors inside the combo box*/
+{
+    background-color: rgb(80, 80, 80);
+    selection-background-color: rgb(50, 50, 50);
+    selection-color: rgb(10, 10, 10);
+}
+
+PreferencesDialog QComboBox QAbstractItemView      /* the colors inside drop down menu of the combo box*/
+{
+    border: 1px solid black;
+    color: rgb(160, 160, 160);
+    background-color: rgb(70, 70, 70);
+    selection-background-color: rgb(50, 50, 50);
+    selection-color: rgb(10, 10, 10);
 }
 
 QInputDialog QPushButton
@@ -68,18 +76,3 @@ BusyDialog > QLabel /* the text appearing in Busy dialog, like "connecting in ni
     color: rgb(140, 140, 140);
 }
 
-PreferencesDialog QComboBox                         /* the colors inside the combo box*/
-{
-    background-color: rgb(80, 80, 80);
-    selection-background-color: rgb(50, 50, 50);
-    selection-color: rgb(10, 10, 10);
-}
-
-PreferencesDialog QComboBox QAbstractItemView      /* the colors inside drop down menu of the combo box*/
-{
-    border: 1px solid black;
-    color: rgb(160, 160, 160);
-    background-color: rgb(70, 70, 70);
-    selection-background-color: rgb(50, 50, 50);
-    selection-color: rgb(10, 10, 10);
-}
