--- a/src/resources/css/themes/Black/Dialogs.css
+++ b/src/resources/css/themes/Black/Dialogs.css
@@ -4,6 +4,7 @@ QMessageBox,
 QInputDialog,
 PluginScanDialog,
 MidiToolsDialog,
+PluginScanDialog,
 PreferencesDialog
 {
     border-color: rgb(20, 20, 20);
@@ -38,13 +39,6 @@ QInputDialog QPushButton
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 rgb(20,20,20), stop:0.02 rgb(80, 80, 80), stop:0.7 rgba(90, 90, 90), stop:1 rgb(40,40,40));
     border-color: rgb(20, 20, 20);
     color: rgb(140,140,140);
-}
-
-PluginScanDialog
-{
-    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-        stop:0 rgb(250, 250, 250),
-        stop:1 rgb(220, 220, 220));
 }
 
 PluginScanDialog QPlainTextEdit
