--- a/src/resources/css/themes/Black/Dialogs.css
+++ b/src/resources/css/themes/Black/Dialogs.css
@@ -7,9 +7,7 @@ PreferencesDialog
 
 QMessageBox,
 QInputDialog,
-PluginScanDialog,
 MidiToolsDialog,
-PluginScanDialog,
 UserNameDialog,
 PrivateServerDialog
 {
@@ -20,12 +18,13 @@ PrivateServerDialog
     stop:1 rgb(40, 40, 40));
 }
 
+/*
 PrivateServerDialog #passwordTextField, #serverPortTextField, #serverTextField
 {
     color: rgb(160, 160, 160);
     background-color: rgb(70, 70, 70);
     selection-background-color: rgb(50, 50, 50);
-    selection-color: rgb(40, 40, 40);
+    selection-color: rgb(140, 140, 140);
 }
 
 UserNameDialog #lineEdit
@@ -33,8 +32,9 @@ UserNameDialog #lineEdit
     color: rgb(160, 160, 160);
     background-color: rgb(70, 70, 70);
     selection-background-color: rgb(50, 50, 50);
-    selection-color: rgb(40, 40, 40);
+    selection-color: rgb(140, 140, 140);
 }
+*/
 
 PrivateServerDialog #label, #label_2, #label_3
 {
@@ -70,6 +70,23 @@ PreferencesDialog QComboBox QAbstractItemView      /* the colors inside drop dow
     selection-color: rgb(10, 10, 10);
 }
 
+/*
+PreferencesDialog #recordPathLineEdit, #textFieldPrimaryBeat, #textFieldSecondaryBeat
+{
+    color: rgb(160, 160, 160);
+    background-color: rgb(70, 70, 70);
+    selection-background-color: rgb(50, 50, 50);
+    selection-color: rgb(140, 140, 140);
+}
+*/
+
+PreferencesDialog #vstListWidget
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+    stop:0 rgb(180, 180, 180),
+    stop:1 rgb(120, 120, 120));;
+}
+
 MidiToolsDialog #label_5, #labelHigherNote, #labelLowerNoteX
 {
     color: rgb(160, 160, 160);
@@ -82,12 +99,22 @@ MidiToolsDialog #GroupBoxKeyRange, #GroupBoxTranspose
 
 MidiToolsDialog #spinBoxTranspose
 {
-    border: 1px solid rgb(140, 140, 140);
+    border: 1px solid rgb(80, 80, 80);
     color: rgb(160, 160, 160);
     background-color: rgb(70, 70, 70);
     selection-background-color: rgb(50, 50, 50);
-    selection-color: rgb(40, 40, 40);
+    selection-color: rgb(140, 140, 140);
 }
+
+/*
+MidiToolsDialog #textFieldHigherNote, #textFieldLowerNote
+{
+    color: rgb(160, 160, 160);
+    background-color: rgb(70, 70, 70);
+    selection-background-color: rgb(50, 50, 50);
+    selection-color: rgb(140, 140, 140);
+}
+*/
 
 QInputDialog QPushButton
 {
@@ -104,6 +131,13 @@ PluginScanDialog QPlainTextEdit
 PluginScanDialog #labelPluginText
 {
     font-weight: bold;
+}
+
+PluginScanDialog
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+    stop:0 rgb(120, 120, 120),
+    stop:1 rgb(40, 40, 40));
 }
 
 BusyDialog
