--- a/src/resources/css/themes/Black/MainWindow.css
+++ b/src/resources/css/themes/Black/MainWindow.css
@@ -54,10 +54,10 @@ QMainWindow
     background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
     stop:0 rgb(50, 50, 50),
     stop:1 rgb(10, 10, 10));
-    border-top: 1px solid Black;
-    border-left: 1px solid Black;
-    border-right: 1px solid Black;
-    border-bottom: 1px solid Black;
+    border-top: 1px solid rgb(30, 30, 30);
+    border-left: 1px solid rgb(30, 30, 30);
+    border-right: 1px solid rgb(30, 30, 30);
+    border-bottom: 1px solid rgb(30, 30, 30);
 }
 
 #leftPanel
