--- a/src/resources/css/themes/Black/LocalTrack.css
+++ b/src/resources/css/themes/Black/LocalTrack.css
@@ -174,8 +174,10 @@ background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(180, 20,
 LocalTrackGroupView #groupNameField
 {
     color: rgb(150, 150, 150);
-    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-    stop:0 rgb(50, 50, 50),
-    stop:1 rgb(65, 65, 65));
-    border: 1px solid rgb(54, 54, 54);
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+            stop:0 rgb(85, 85, 85),
+            stop:0.1 rgb(65, 65, 65)
+            stop:0.9 rgba(45, 45, 45),
+            stop:1 rgba(25, 25, 25));
+    border: 1px solid rgb(55, 55, 55);
 }
