--- a/src/resources/css/themes/Black/MainWindow.css
+++ b/src/resources/css/themes/Black/MainWindow.css
@@ -1,9 +1,11 @@
 #userNamePanel
 {
     color: rgb(140, 140, 140);
-    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-    stop:0 rgb(45, 45, 45),
-    stop:1 rgb(65, 65, 65));
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+            stop:0 rgb(85, 85, 85),
+            stop:0.1 rgb(65, 65, 65)
+            stop:0.9 rgba(45, 45, 45),
+            stop:1 rgba(25, 25, 25));
     border: 1px solid rgb(55, 55, 55);
     padding: 1px;
 }
