correct colors for metronome floating window

--- a/src/resources/css/themes/Black/NinjamWindow.css
+++ b/src/resources/css/themes/Black/NinjamWindow.css
@@ -168,9 +168,12 @@ NinjamTrackGroupView                        /* ninjam track group. If a ninjamer
 }
 
 
-IntervalProgressWindow                      /* The floating window showing the metronome/interval progress */
+/** The floating window showing the metronome/interval progress */
+IntervalProgressWindow
 {
-    background-color: rgb(140, 140, 140);
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+    stop: 0.8     rgb(50, 50, 50),
+    stop: 1.0   rgba(30, 30, 30));
 }
 
 #panelCombos QLabel             /* The labels in left side of comboboxes (bpi, bpm, accents and shape) */
