--- a/src/resources/css/themes/Black/General.css
+++ b/src/resources/css/themes/Black/General.css
@@ -59,18 +59,48 @@ QScrollBar:horizontal
     margin-top: 6px;
 }
 
-QScrollBar::handle:vertical,
 QScrollBar::handle:horizontal
 {
-  border: 1px solid rgba(0, 0, 0, 45);
-  background-color: rgb(80, 80, 80);
-  margin: 0px;
+    background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:0, y2:0,
+        stop:0 rgba(120, 126, 118, 80),
+        stop:0.47 rgba(91, 91, 91, 80),
+        stop:0.49 rgba(81, 75, 77, 80),
+        stop:0.92 rgba(142, 140, 140, 80));
+
+    max-height: 20px;
+    height: 20px;
 }
 
-QScrollBar::handle:horizontal:hover,
+QScrollBar::handle:horizontal:hover
+{
+    background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:0, y2:0,
+        stop:0 rgba(140, 146, 138, 200),
+        stop:0.47 rgba(121, 121, 121, 200),
+        stop:0.49 rgba(111, 95, 97, 200),
+        stop:0.92 rgba(172, 170, 170, 200)
+    );
+}
+
+
+QScrollBar::handle:vertical
+{
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0,
+        stop:0.92 rgba(120, 126, 118, 80),
+        stop:0.49 rgba(91, 91, 91, 80),
+        stop:0.47 rgba(81, 75, 77, 80),
+        stop:0 rgba(142, 140, 140, 80));
+
+    max-width: 20px;
+    width: 20px;
+}
+
 QScrollBar::handle:vertical:hover
 {
-    background-color: rgb(140, 140, 140);
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0,
+        stop:0.92 rgba(140, 146, 138, 200),
+        stop:0.49 rgba(121, 121, 121, 200),
+        stop:0.47 rgba(111, 95, 97, 200),
+        stop:0 rgba(172, 170, 170, 200));
 }
 
 QScrollBar::handle:vertical
