finishing black theme

--- a/src/resources/css/themes/Black/Dialogs.css
+++ b/src/resources/css/themes/Black/Dialogs.css
@@ -111,14 +111,14 @@ PluginScanDialog QGroupBox
 
 BusyDialog
 {
-    border: 1px solid rgba(0, 0, 0, 30);
+    border: 1px solid rgba(20, 20, 20);
     padding: 0px;
     margin: 0px;
     border-radius: 3px;
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
             stop:0 rgb(80, 80, 80),
-            stop:0.1 rgb(60, 60, 60)
-            stop:0.9 rgba(40, 40, 40),
+            stop:0.3 rgb(60, 60, 60)
+            stop:0.6 rgba(40, 40, 40),
             stop:1 rgba(20, 20, 20));
 }
 
