--- a/src/resources/css/themes/Black/NinjamWindow.css
+++ b/src/resources/css/themes/Black/NinjamWindow.css
@@ -122,6 +122,11 @@ NinjamRoomWindow #labelUserName
     color: rgb(140, 140, 140);
 }
 
+NinjamRoomWindow #labelBpmBpi
+{
+    color: rgb(70, 70, 70);
+}
+
 /* Ninjam tracks
 -----------------------------------------*/
 
