--- a/src/resources/css/themes/Flat/NinjamWindow.css
+++ b/src/resources/css/themes/Flat/NinjamWindow.css
@@ -1,4 +1,7 @@
-
+NinjamTrackView[horizontal="true"] #panSlider
+{
+    max-width: 50px;
+}
 
 NinjamTrackView[horizontal="true"] #buttonBoostMinus12,
 NinjamTrackView[horizontal="true"] #buttonBoostPlus12,
