--- a/src/resources/css/themes/Rounded/NinjamWindow.css
+++ b/src/resources/css/themes/Rounded/NinjamWindow.css
@@ -5,6 +5,11 @@ NinjamTrackView QProgressBar
     border-radius: 2px;
 }
 
+NinjamTrackView[horizontal="true"] #panSlider
+{
+    max-width: 50px;
+}
+
 NinjamTrackGroupView[horizontal="true"] #topPanel
 {
     border-top-left-radius: 2px;
