--- a/src/resources/css/themes/Black/BaseTrack.css
+++ b/src/resources/css/themes/Black/BaseTrack.css
@@ -143,6 +143,12 @@ BaseTrackView[unlighted="true"] #buttonStereoInversion
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(180, 180, 180), stop:1 rgb(120, 120, 120));
     color: rgb(80, 80, 80);
 }
+
+BaseTrackView[unlighted="true"] #buttonStereoInversion:hover, #buttonStereoInversion:hover:checked
+{
+    background-color: rgba(0, 0, 0, 80);
+}
+
 /* Small Label used to show max peak below peak meters
 -------------------------------------------------------*/
 BaseTrackView #peaksDbLabel
