--- a/src/resources/css/themes/Black/General.css
+++ b/src/resources/css/themes/Black/General.css
@@ -284,6 +284,11 @@ QMenu
     background:rgb(35, 35, 35);
 }
 
+QMenu::item:selected
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(60, 60, 60), stop:1 rgb(40, 40, 40));
+}
+
 QTabWidget::pane
 {
     background-color: transparent;
